# fhscript

./: .clang-format  1.js  2.js  CMakeLists.txt  Makefile  README.md  format.sh  main.cc
src/: fhscript.h  fhscript_test.cc  main.cc
